# CMake_test2

./: README.md
CMake_test2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CMake_test2/menu/: CMakeLists.txt  Makefile  cmake_install.cmake
CMake_test2/student/: CMakeLists.txt  Makefile  cmake_install.cmake
